HUDF-1144: Fixed notification time cutoff in firefox @jcheungfc

--- a/FJSHUD/app/styles/firefox.less
+++ b/FJSHUD/app/styles/firefox.less
@@ -314,7 +314,8 @@
   .NotificationHeader{
     position: relative;
     z-index: 100;
-    top: 0;   
+    top: 0;
+    height: 20px;
   }
   .NotificationSection {
     float: left;
@@ -354,7 +355,7 @@
     
     .NotificationDisplayName {
         padding-left: 5px;
-        height: 20px !important;
+        height: 2.5em !important;
         
         span{
           width: auto !important;
@@ -370,14 +371,9 @@
         top: -5px;
         margin-bottom: -10px;
     }
-	
-    .NotificationTime{
-        font-size: 11px;
-        right: 0;
-        bottom: 10px !important;
-    }
-    
+
     .NotificationMessage {
+        padding-top: 0px !important;
         padding-left: 5px;
     }
     
