--- a/FJSHUD/app/styles/notification.less
+++ b/FJSHUD/app/styles/notification.less
@@ -7,7 +7,7 @@
 	-webkit-flex: 1;
 		
 	.NotificationDisplayName{
-		height: 2.5em;
+		height: 1.75em;
 		text-overflow: ellipsis;
 		white-space: nowrap;
 		overflow: hidden;
@@ -49,7 +49,8 @@
 	}
 
 	.NotificationMessage{
-		width:100%;		
+		padding-top: 5px;
+    width:100%;		
 		position:relative;
 		overflow:hidden;
 		font-size: 13px;
@@ -353,8 +354,9 @@
 }
 
 .NotificationHeader{
-	float:right;
+	float: right;
 	margin-right: -1px;
+  height: 10px;
 	
 	.firstHeaderTitle{	   
        position: relative;      
